BCEL test working again
git-svn-id: http://svn.codehaus.org/jremoting/jremoting/trunk@17 ebf96e7e-f801-0410-8dc7-a7e6b35a8818